src/test/error/operand.lns
{
   let val = not 1; // error
}

fn func( val:int! ) {
}

{
   let val1 = 1;
   let val2:int! = nil;
   func( val1 or val2 );
   func( 1 and 2 ); // error
}

{
   let val:int! = 1;
   print( val and false or 1 );  // error
}

{
   let map:Map<int,int> = {};
   let size = #map; // error
}
